Funcionando los popUp de los proyectos

--- a/Spanish.html
+++ b/Spanish.html
@@ -102,286 +102,10 @@
         <span class="mainTitle titleShadow--noBreak"></span>
         <h2 class="mainTitle frontShadow">Proyectos</h2>
 
-        <section class="projects__container">
-          <article class="projects__project">
-            <img
-              src="./Assets/Images/Ecommerce.png"
-              alt="Imagen del proyecto"
-            />
-            <div class="projects__projectRight">
-              <h3 class="projects__projectTitle">E-commerce</h3>
-
-              <button id="firstProjectModal" class="project__infoButton">
-                Más información
-              </button>
-
-              <div class="projects__projectRedirections">
-                <a href="#" class="projectLink__left projects__projectLink"
-                  >Página Web</a
-                >
-                <a href="#" class="projectLink__right projects__projectLink"
-                  >GitHub</a
-                >
-              </div>
-            </div>
-          </article>
-
-          <article class="projects__project">
-            <img
-              src="./Assets/Images/App de juegos.png"
-              alt="Imagen del proyecto"
-            />
-            <div class="projects__projectRight">
-              <h3 class="projects__projectTitle">App de juegos</h3>
-
-              <button id="seconsProjectModal" class="project__infoButton">
-                Más información
-              </button>
-
-              <div class="projects__projectRedirections">
-                <a href="#" class="projectLink__left projects__projectLink"
-                  >Página Web</a
-                >
-                <a href="#" class="projectLink__right projects__projectLink"
-                  >GitHub</a
-                >
-              </div>
-            </div>
-          </article>
-
-          <article class="projects__project">
-            <img
-              src="./Assets/Images/Simbiontes.png"
-              alt="Imagen del proyecto"
-            />
-            <div class="projects__projectRight">
-              <h3 class="projects__projectTitle">Simbiontes</h3>
-
-              <button id="thirdProjectModal" class="project__infoButton">
-                Más información
-              </button>
-
-              <div class="projects__projectRedirections">
-                <a href="#" class="projectLink__left projects__projectLink"
-                  >Página Web</a
-                >
-                <a href="#" class="projectLink__right projects__projectLink"
-                  >GitHub</a
-                >
-              </div>
-            </div>
-          </article>
-
-          <article class="projects__project">
-            <img
-              src="./Assets/Images/Página estática.png"
-              alt="Imagen del proyecto"
-            />
-            <div class="projects__projectRight">
-              <h3 class="projects__projectTitle">Página Estática</h3>
-
-              <button id="fourthProjectModal" class="project__infoButton">
-                Más información
-              </button>
-
-              <div class="projects__projectRedirections">
-                <a href="#" class="projectLink__left projects__projectLink"
-                  >Página web</a
-                >
-                <a href="#" class="projectLink__right projects__projectLink"
-                  >GitHub</a
-                >
-              </div>
-            </div>
-          </article>
-
+        <section class="projects__container" id="projects__container">
           <!-- Primer modal (Ecommerce) -->
-          <div class="modal" id="firstModal">
-            <div class="projects__modalContent">
-              <span class="modal__closeBtn">&times;</span>
-              <img
-                src="./Assets/Images/Ecommerce.png"
-                alt="Imagen del proyecto"
-                class="projects__modalImg"
-              />
-              <div class="projects__modalRight">
-                <h3 class="projects__projectTitle">Página Estática</h3>
-
-                <div class="projects__projectRedirections">
-                  <a href="#" class="projectLink__left projects__projectLink"
-                    >Página web</a
-                  >
-                  <a href="#" class="projectLink__right projects__projectLink"
-                    >GitHub</a
-                  >
-                </div>
-
-                <hr />
-
-                <p class="projects__projectText projects__centerText">
-                  This project uses:
-                </p>
-                <p class="projects__projectText projects__centerText">
-                  React Native - Firebase
-                </p>
-                <hr />
-
-                <p class="projects__projectText">
-                  Es una aplicación de comercio electrónico genérica hecha en
-                  React para un curso de CoderHouse.
-                  <br />
-                  El diseño fue de mi autoría y sus funcionalidades fueron
-                  realizadas durante el transcurso del curso
-                  <br />
-                  Toma productos de una colección personalizada de Firebase,
-                  también toma un solo producto de Firebase y muestra una página
-                  detallada de el mismo.
-                  <br />
-                  Dispone de carro (página de detalle y miniatura arriba a la
-                  derecha) con control de stock y guarda el "Pedido de compra"
-                  en Firebase
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <!-- Segundo modal (Games App) -->
-          <div class="modal" id="secondModal">
-            <div class="projects__modalContent">
-              <span class="modal__closeBtn">&times;</span>
-              <img
-                src="./Assets/Images/App de juegos.png"
-                alt="Imagen del proyecto"
-                class="projects__modalImg"
-              />
-              <div class="projects__modalRight">
-                <h3 class="projects__projectTitle">Página Estática</h3>
-
-                <div class="projects__projectRedirections">
-                  <a href="#" class="projectLink__left projects__projectLink"
-                    >Página web</a
-                  >
-                  <a href="#" class="projectLink__right projects__projectLink"
-                    >GitHub</a
-                  >
-                </div>
-
-                <hr />
-
-                <p class="projects__projectText projects__centerText">
-                  This project uses:
-                </p>
-                <p class="projects__projectText projects__centerText">
-                  HTML - CSS - JS
-                </p>
-                <hr />
-
-                <p class="projects__projectText">
-                  Es una página web que tiene como objetivo demostrar la
-                  conocimientos adquiridos en el curso de JavaScript de
-                  CoderHouse
-                  <br />
-                  Es una aplicación educativa (sin un tema específico cargado)
-                  para niños pequeños
-                  <br />
-                  Su objetivo es llegar a la etapa final y para hacerlo debes
-                  leer un texto (a insertar) en la aplicación, tener una prueba
-                  de opción múltiple al respecto, aprovarla con 7 y ganar un
-                  juego (si fallas en este punto, solo vuelves a jugar al juego
-                  que te tocó)
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <!-- Tercer modal -->
-          <div class="modal" id="thirdModal">
-            <div class="projects__modalContent">
-              <span class="modal__closeBtn">&times;</span>
-              <img
-                src="./Assets/Images/Simbiontes.png"
-                alt="Imagen del proyecto"
-                class="projects__modalImg"
-              />
-              <div class="projects__modalRight">
-                <h3 class="projects__projectTitle">Página Estática</h3>
-
-                <div class="projects__projectRedirections">
-                  <a href="#" class="projectLink__left projects__projectLink"
-                    >Página web</a
-                  >
-                  <a href="#" class="projectLink__right projects__projectLink"
-                    >GitHub</a
-                  >
-                </div>
-
-                <hr />
-
-                <p class="projects__projectText projects__centerText">
-                  This project uses:
-                </p>
-                <p class="projects__projectText projects__centerText">
-                  HTML - CSS
-                </p>
-                <hr />
-
-                <p class="projects__projectText">
-                  It's a web page that has the objective of demonstrating the
-                  knowledge acquired in the CoderHouse HTML and CSS course Lorem
-                  ipsum dolor sit amet consectetur adipisicing elit. Nihil,
-                  laboriosam tempora ex earum blanditiis id. Quibusdam dolorum
-                  eos error? Optio? Lorem ipsum dolor sit amet consectetur
-                  adipisicing elit. Labore odio blanditiis ad a qui quia
-                  doloribus eos sit quas nihil.
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <!-- Cuarto modal -->
-          <div class="modal" id="fourthModal">
-            <div class="projects__modalContent">
-              <span class="modal__closeBtn">&times;</span>
-              <img
-                src="./Assets/Images/Página estática.png"
-                alt="Imagen del proyecto"
-                class="projects__modalImg"
-              />
-              <div class="projects__modalRight">
-                <h3 class="projects__projectTitle">Página Estática</h3>
-
-                <div class="projects__projectRedirections">
-                  <a href="#" class="projectLink__left projects__projectLink"
-                    >Página web</a
-                  >
-                  <a href="#" class="projectLink__right projects__projectLink"
-                    >GitHub</a
-                  >
-                </div>
-
-                <hr />
-
-                <p class="projects__projectText projects__centerText">
-                  This project uses:
-                </p>
-                <p class="projects__projectText projects__centerText">
-                  HTML - CSS
-                </p>
-                <hr />
-
-                <p class="projects__projectText">
-                  It's a web page that has the objective of demonstrating the
-                  knowledge acquired in the CoderHouse HTML and CSS course Lorem
-                  ipsum dolor sit amet consectetur adipisicing elit. Nihil,
-                  laboriosam tempora ex earum blanditiis id. Quibusdam dolorum
-                  eos error? Optio? Lorem ipsum dolor sit amet consectetur
-                  adipisicing elit. Labore odio blanditiis ad a qui quia
-                  doloribus eos sit quas nihil.
-                </p>
-              </div>
-            </div>
-          </div>
         </section>
+        <div class="modal" id="modal"></div>
       </section>
 
       <!-- * Final de la Sección de Proyectos -->
@@ -789,8 +513,12 @@
       <!-- * Final de la Sección de Contacto -->
     </main>
 
-    <!-- Algoritmo de los modal -->
-    <script type="text/javascript" src="./JS/Modal.js" defer></script>
+    <!-- Algoritmo del modal -->
+    <script type="text/javascript" src="./Assets/data/projectsData.js"></script>
+
+    <script type="text/javascript" src="./JS/Modal.js"></script>
+
+    <script type="text/javascript" src="./JS/RenderProjects.js"></script>
 
     <!-- Inicio de lógica de los Sorting Algorithms -->
     <script
