Agregada la renderización de proyectos en español

--- a/Spanish.html
+++ b/Spanish.html
@@ -518,7 +518,7 @@
 
     <script type="text/javascript" src="./JS/Modal.js"></script>
 
-    <script type="text/javascript" src="./JS/RenderProjects.js"></script>
+    <script type="text/javascript" src="./JS/RenderProjectsSpanish.js"></script>
 
     <!-- Inicio de lógica de los Sorting Algorithms -->
     <script
