Added gifs to projects

--- a/Index.html
+++ b/Index.html
@@ -117,7 +117,7 @@
       <section class="algorithm" id="algorithm">
         <div class="mainTitleContainer">
           <span class="mainTitle algorithm__titleShadow--height"></span>
-          <h2 class="mainTitle frontShadow">Sorting Algorithms</h2>
+          <h2 class="mainTitle frontShadow">Fun doesn't harm</h2>
         </div>
 
         <!-- Inicio de los controles del algoritmo -->
