--- a/Spanish.html
+++ b/Spanish.html
@@ -115,7 +115,7 @@
       <section class="algorithm" id="algorithm">
         <div class="mainTitleContainer">
           <span class="mainTitle algorithm__titleShadow--height"></span>
-          <h2 class="mainTitle frontShadow">Algoritmos de Clasificación</h2>
+          <h2 class="mainTitle frontShadow">Un poco de diversión no daña</h2>
         </div>
 
         <!-- Inicio de los controles del algoritmo -->
