--- a/Index.html
+++ b/Index.html
@@ -39,7 +39,7 @@
           <div class="hover--rotate">
             <span class="roleShadowWidth shadow"></span>
             <a href="https://www.freelancermap.com/blog/es/diferencias-programador-junior-y-senior/#:~:text=Un%20programador%20de%20nivel%20junior,catalogado%20como%20un%20programador%20senior."
-              target="_blank" class="frontShadow roleShadowWidth">Junior Web Developer</a>
+              target="_blank" class="frontShadow roleShadowWidth">Full Stack Developer</a>
           </div>
         </div>
         <p class="landing__text">
