Changed about me technologies

--- a/Spanish.html
+++ b/Spanish.html
@@ -298,33 +298,6 @@
 
           <section class="about__technologiesContainer">
             <div class="about__technology">
-              <div class="about__technology--hover">HTML</div>
-              <img
-                src="./Assets/Images/HTML-logo.png"
-                alt="HTML-Logo"
-                class="about__technologyIMG"
-              />
-            </div>
-
-            <div class="about__technology">
-              <div class="about__technology--hover">CSS</div>
-              <img
-                src="./Assets/Images/CSS-logo.png"
-                alt="CSS-Logo"
-                class="about__technologyIMG"
-              />
-            </div>
-
-            <div class="about__technology">
-              <div class="about__technology--hover">SASS</div>
-              <img
-                src="./Assets/Images/SASS-logo.png"
-                alt="SASS-Logo"
-                class="about__technologyIMG"
-              />
-            </div>
-
-            <div class="about__technology">
               <div class="about__technology--hover">JavaScript</div>
               <img
                 src="./Assets/Images/JS-logo.png"
@@ -341,6 +314,33 @@
                 class="about__technologyIMG"
               />
             </div>
+
+            <div class="about__technology">
+              <div class="about__technology--hover">Express</div>
+              <img
+                src="./Assets/Images/EXPRESS-logo.png"
+                alt="SASS-Logo"
+                class="about__technologyIMG"
+              />
+            </div>
+
+            <div class="about__technology">
+              <div class="about__technology--hover">HTML</div>
+              <img
+                src="./Assets/Images/HTML-logo.png"
+                alt="HTML-Logo"
+                class="about__technologyIMG"
+              />
+            </div>
+
+            <div class="about__technology">
+              <div class="about__technology--hover">CSS</div>
+              <img
+                src="./Assets/Images/CSS-logo.png"
+                alt="CSS-Logo"
+                class="about__technologyIMG"
+              />
+            </div>
           </section>
 
           <div class="centerObject">
@@ -349,6 +349,33 @@
           </div>
 
           <section class="about__technologiesContainer">
+            <div class="about__technology">
+              <div class="about__technology--hover">Figma</div>
+              <img
+                src="./Assets/Images/FIGMA-logo.png"
+                alt="Figma-Logo"
+                class="about__technologyIMG"
+              />
+            </div>
+
+            <div class="about__technology">
+              <div class="about__technology--hover">Notion</div>
+              <img
+                src="./Assets/Images/NOTION-logo.png"
+                alt="SpotifyAPI-Logo"
+                class="about__technologyIMG"
+              />
+            </div>
+
+            <div class="about__technology">
+              <div class="about__technology--hover">NGINX</div>
+              <img
+                src="./Assets/Images/NGINX-logo.webp"
+                alt="Firebase-Logo"
+                class="about__technologyIMG"
+              />
+            </div>
+
             <div class="about__technology">
               <div class="about__technology--hover">Git</div>
               <img
@@ -363,33 +390,6 @@
               <img
                 src="./Assets/Images/GITHUB-logo.png"
                 alt="GitHub-Logo"
-                class="about__technologyIMG"
-              />
-            </div>
-
-            <div class="about__technology">
-              <div class="about__technology--hover">Figma</div>
-              <img
-                src="./Assets/Images/FIGMA-logo.png"
-                alt="Figma-Logo"
-                class="about__technologyIMG"
-              />
-            </div>
-
-            <div class="about__technology">
-              <div class="about__technology--hover">Firebase</div>
-              <img
-                src="./Assets/Images/FIREBASE-logo.png"
-                alt="Firebase-Logo"
-                class="about__technologyIMG"
-              />
-            </div>
-
-            <div class="about__technology">
-              <div class="about__technology--hover">BEM</div>
-              <img
-                src="./Assets/Images/BEM-logo.png"
-                alt="SpotifyAPI-Logo"
                 class="about__technologyIMG"
               />
             </div>
