--- a/Index.html
+++ b/Index.html
@@ -451,23 +451,12 @@
             </p>
           </div>
 
-          <form
-            class="contact__form"
-            action="https://formsubmit.co/31c3ba2f24e1340ca02c4f2ce657e9f7"
-            method="POST"
-          >
-            <input
-              type="hidden"
-              name="_next"
-              value="https://francisco-muniz.netlify.app"
-            />
-
-            <input type="hidden" name="_captcha" value="false" />
-
+          <form class="contact__form" id="form">
             <h3 class="contact__formTitle">Send me a Message</h3>
 
             <input
               class="contact__messageTitle"
+              id="author"
               type="email"
               name="email"
               placeholder="Your email"
@@ -478,7 +467,7 @@
               class="contact__messageTitle"
               type="text"
               name="messageTitle"
-              id="messageTitle"
+              id="subject"
               placeholder="Let's chat"
               required
             />
@@ -561,5 +550,12 @@
       src="./JS/Sorting Algorithm/Algorithms/SelectionSort.js"
       defer
     ></script>
+
+    <!-- Email sender -->
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
+    ></script>
+    <script type="text/javascript" src="./JS/SendEmail.js" defer></script>
   </body>
 </html>
