changed about me text on spanish page

--- a/Spanish.html
+++ b/Spanish.html
@@ -204,7 +204,7 @@
         </p>
         <br />
         <p class="aboutMe__text">
-          🗺️ Actualmente me encuentro en la ciudad de Posadas - Misiones
+          🗺️ Actualmente me encuentro en Posadas - Misiones
         </p>
         <br />
 
