Changed avatar images for myself

--- a/Spanish.html
+++ b/Spanish.html
@@ -186,7 +186,7 @@
 
       <section class="about__aboutMe">
         <p class="aboutMe__text">
-          <img src="./Assets/Images/myAvatar.png" alt="Foto del programador del portfolio" class="aboutMe__img"
+          <img src="./Assets/Images/myself.png" alt="Foto del programador del portfolio" class="aboutMe__img"
             align="left" />
           👋​ Hola soy Francisco, desarrollador FullStack con incesante
           curiosidad.
