--- a/Index.html
+++ b/Index.html
@@ -186,7 +186,7 @@
 
       <section class="about__aboutMe about__aboutMe--english">
         <p class="aboutMe__text">
-          <img src="./Assets/Images/myAvatar.png" alt="Foto del programador del portfolio" class="aboutMe__img"
+          <img src="./Assets/Images/myself.png" alt="Foto del programador del portfolio" class="aboutMe__img"
             align="left" />
           👋 Hi, I'm Francisco, a FullStack developer with incessant
           curiosity.
