Modified about me texts

--- a/Index.html
+++ b/Index.html
@@ -198,10 +198,13 @@
           <br />
           🎯My strengths are NodeJS with Express, JavaScript, MongoDB, and
           ReactJS. He also worked with Sessions, Socket.io, NestJS, Mocha, and
-          GraphQL. Looking forward to turning my professional career around, I
-          want to be able to join a team where I can enjoy and continue to
+          GraphQL.
+          <br />
+          <br />
+          Looking forward to join a team where I can enjoy and continue to
           grow personally and professionally.
         </p>
+        <br />
         <p class="aboutMe__text">🗺️ Actually I'm in Posadas - Misiones</p>
 
         <div clear="all"></div>
