--- a/Spanish.html
+++ b/Spanish.html
@@ -198,8 +198,10 @@
           <br />
           🎯Mis fuertes son JavaScript con NodeJS, Express, MongoDB y ReactJS.
           También he trabajado con Sessions, Socket.io, NestJS, Mocha y
-          GraphQL. Con muchas ganas de dar un giro a mi carrera profesional,
-          deseo poder sumarme a un equipo donde pueda disfrutar y seguir
+          GraphQL.
+          <br />
+          <br />
+          Deseo poder sumarme a un equipo donde pueda disfrutar y seguir
           creciendo profesional y personalmente.
         </p>
         <br />
